unpackaged/main/default/objects/Campaign_PR__c/Campaign_PR__c.object-meta.xml
<CustomObject>
    <description>Junction object to for Campaign &amp; PR Header</description>
    <label>Campaign PR</label>
    <nameField>
        <displayFormat>PRC-{00000}</displayFormat>
        <label>PR Campaign #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign PRs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>