unpackaged/main/default/objects/Campaign_PR__c/fields/PR_Header__c.field-meta.xml
<CustomField>
    <fullName>PR_Header__c</fullName>
    <label>PR Header</label>
    <referenceTo>PR_Header__c</referenceTo>
    <relationshipLabel>PR Campaigns</relationshipLabel>
    <relationshipName>Campaign_PRs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>